--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>pazzle</title>
+  <title>messy</title>
   <link rel="stylesheet" href="reset.css">
   <style>
     body {
