--- a/index.html
+++ b/index.html
@@ -3,28 +3,30 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>messy</title>
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-  <input type="file" id="fileInput" value=“./bg.jpg” accept="image/png, image/jpeg, image/gif, image/jpg">
-  <select id="step">
-    <option value="0">简单</option>
-    <option value="1">中等</option>
-    <option value="2">困难</option>
-    <option value="3">地狱</option>
-  </select>
-  <button class="reset-btn">click to reset</button>
-  <button class="return-btn">click to return</button>
-  <br />
-  <img src="" id="img" alt="" style="width:25%;">
+<input type="file" id="fileInput" value=“./bg.jpg”
+    accept="image/png, image/jpeg, image/gif, image/jpg">
+<select id="step">
+  <option value="0">简单</option>
+  <option value="1">中等</option>
+  <option value="2">困难</option>
+  <option value="3">地狱</option>
+</select>
+<button class="reset-btn">click to reset</button>
+<button class="return-btn">click to return</button>
+<br/>
+<img src="" id="img" alt="" style="width:25%;">
 
 
-  <div class="pazzle"></div>
-  <!--<div class="pazzle2"></div>-->
+<div class="pazzle"></div>
+<!--<div class="pazzle2"></div>-->
 
 </body>
 <script src="./drag.js"></script>
@@ -46,7 +48,7 @@
       let config = {
         rotate: true,
         rank: document.querySelector('#step').value,
-        src: file ?  getObjectURL(file):document.querySelector('#img').src,
+        src: file ? getObjectURL(file) : document.querySelector('#img').src,
       }
       initPazzle(config)
     })
@@ -77,7 +79,7 @@
     getImgInfo(config.src).then((imgInfo) => {
       initItems(imgInfo, config)
       messy()
-      initItemsEvent()
+      // initItemsEvent()
     })
   }
 
@@ -100,7 +102,7 @@
       height: 0
     }
     let clipNum = [
-      [2, 2],
+      [4, 4],
       [6, 8],
       [20, 10],
       [50, 20]
@@ -128,13 +130,17 @@
     let wH = document.body.offsetHeight
 
     // 设置容器宽高
-    pazzleContainer.style.width = `${bgSize.width}px`
+    pazzleContainer.style.width = `${bgSize.width+1}px`
     pazzleContainer.style.height = `${bgSize.height}px`
+    pazzleContainer.style.backgroundSize = `${styles.width} ${styles.height},${styles.width} ${styles.height}`
 
     // 配置拼图块
     let frag = document.createDocumentFragment()
 
     let rect = pazzleContainer.getBoundingClientRect()
+
+
+    let positionData = []
 
     for (let i = 0; i < clipNum[0] * clipNum[1]; i++) {
       // 设置拼图上层
@@ -144,35 +150,36 @@
 
       let width = Number(styles.width.replace('px', ''))
       let height = Number(styles.height.replace('px', ''))
+      let positionDataLeft = i % clipNum[0] * width
+      let positionDataTop = Math.floor(i / clipNum[0]) * height
+
       pazzleItem.random = {
         left: [-Math.floor(rect.left + i % clipNum[0] * width), Math.floor(wW - width - (rect.left + i % clipNum[0] *
           width))],
         top: [-Math.floor(rect.top + i / clipNum[0] * height), Math.floor(wH - height - (rect.top + i / clipNum[0] *
           height))]
       }
-
+      pazzleItem.left = positionDataLeft
+      pazzleItem.top = positionDataTop
+      pazzleItem.id = i
       pazzleItem.classList.add('pazzle-item')
       pazzleItem.classList.add('animate')
 
       frag.appendChild(pazzleItem)
       // 设置拼图下层
       // pazzle-bottom-item
-      let bottomStyles = {
-        width: styles.width,
-        height: styles.height,
-        left: `${i % clipNum[0] * width}px`,
-        top: `${Math.floor(i / clipNum[0]) * height}px`,
-      }
-      let bottomItem = setStyle(document.createElement('div'), bottomStyles)
-      bottomItem.positionData = {
-        left: Number(bottomStyles.left.replace('px', '')),
-        top: Number(bottomStyles.top.replace('px', '')),
-      }
-      bottomItem.classList.add('pazzle-bottom-item')
-      frag.appendChild(bottomItem)
+
+      positionData.push({
+        X: (wW - bgSize.width) / 2 + positionDataLeft,
+        Y: (wH - bgSize.height) / 2 + positionDataTop,
+        left: positionDataLeft,
+        top: positionDataTop,
+      })
     }
 
     pazzleContainer.appendChild(frag)
+    // 绑定拖拽事件
+    initItemsDragEvent(document.querySelectorAll('.pazzle-item'), positionData)
   }
 
   function messy() {
@@ -193,9 +200,9 @@
     }, 400)
   }
 
-  function initItemsEvent() {
-    initItemsDragEvent(document.querySelectorAll('.pazzle-item'), document.querySelectorAll('.pazzle-bottom-item'))
-  }
+  // function initItemsEvent() {
+  //   initItemsDragEvent(document.querySelectorAll('.pazzle-item'), document.querySelectorAll('.pazzle-bottom-item'))
+  // }
 
   function setStyle(dom, styles) {
     for (let key in styles) {
