--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>messy</title>
+  <title>pazzle</title>
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="index.css">
 </head>
