--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     // 设置容器宽高
     pazzleContainer.style.width = `${bgSize.width+1}px`
-    pazzleContainer.style.height = `${bgSize.height}px`
+    pazzleContainer.style.height = `${bgSize.height+1}px`
     pazzleContainer.style.backgroundSize = `${styles.width} ${styles.height},${styles.width} ${styles.height}`
 
     // 配置拼图块
